# MBZIRC_2017_vision

./: README.md
cross_detector/: CMakeLists.txt  ChangeLog.txt  package.xml
cross_detector/config/: cross_detector_drs.cfg
cross_detector/include/cross_detector/: detector.h
cross_detector/launch/: test.launch
cross_detector/msg/: cross_alt.msg  cross_pos.msg
cross_detector/src/: cross_detector.cpp  detector.cpp
mbzirc_mapping/: CMakeLists.txt  package.xml
mbzirc_mapping/launch/: main.launch
mbzirc_mapping/src/: mbzirc_mapping.cpp
mbzirc_mapping/srv/: GetObjects.srv
object_detection/: CHANGELOG.rst  CMakeLists.txt  package.xml
object_detection/cfg/: f550.yaml  object_detection.cfg  simulation.yaml  uav1.yaml  uav2.yaml  uav3.yaml  uav4.yaml
object_detection/etc/: mbzirc_contest_last.bin.col  simulation.bin.col
object_detection/launch/: main.launch  rosbag.launch  simulation.launch
object_detection/msg/: ObjectWithType.msg  ObjectWithTypeArray.msg  detectedobject.msg
object_detection/src/: CSegmentation.cpp  CSegmentation.h  CTransformation.cpp  CTransformation.h  calibration.cpp  detection.cpp
